syntax = "proto3";

package trpc.TestApp.TestServer;

option java_package = "com.tencent.trpc.demo.proto";
option java_outer_classname = "HelloRequestProtocol";

message HelloRequest {
  string message = 1;
}

message HelloResponse {
  string message = 1;
}

service GreeterService {
  rpc sayHello (HelloRequest) returns (HelloResponse) {}
}

service GreeterService2 {
  rpc sayHi (HelloRequest) returns (HelloResponse) {}
}